--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 
-    "name" : "WAL/IPFO",
+    "name" : "wal/ipfo",
     "description" : "A small library to talk to the intellectual property official offices",
     "autoload": {
         "psr-4": {
