--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
 
-    "name" : "wal/ipfo",
-    "description" : "A small library to talk to the intellectual property official offices",
+    "name" : "snicholson/ipfo",
+    "description" : "A library to talk to the intellectual property official offices",
     "autoload": {
         "psr-4": {
-            "WAL\\IPFO\\" : "src/"
+            "SNicholson\\IPFO\\" : "src/"
         }
     },
     "config": {
@@ -12,6 +12,8 @@
     },
     "require": {
         "guzzlehttp/guzzle": "~5.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.8.*"
     }
-
 }
